# CleveresTricky

./: AGENTS.md  AOSP_NATIVE_MIGRATION_SCENARIO.md  CHANGELOG.md  README.md  binder_router.cpp  build.gradle.kts  commit_message.txt  fix_cpp.py  fix_kt.py  fix_logger.py  fix_methods.py  fix_path.py  fix_readfile.py  fix_remaining.py  patch_binder.sh  patch_cargo.sh  patch_rust.sh  plan.md  pr_body.txt  replace_regex_loops.py  settings.gradle.kts  test_pipe  test_pipe.cpp  test_process_vm_readv  test_process_vm_readv.cpp  test_vm.cpp  update.json
.github/: dependabot.yml
.github/workflows/: build.yml  copilot-setup-steps.yml
encryptor-app/: build.gradle.kts
gradle/: libs.versions.toml
module/: build.gradle.kts
module/common/: autopif.sh  security_patch.sh
module/src/main/cpp/: CMakeLists.txt  binder_interceptor.cpp
module/src/main/cpp/daemon/: main.cpp
module/src/main/cpp/utils/: rust_wrapper.hpp
module/template/: customize.sh  init.rc.disabled  module.prop  post-fs-data.sh  provision_attestation.sh  remote_keys.xml  sepolicy.rule  service.sh
rust/: Cargo.toml
rust/cbor-cose/: Cargo.toml
rust/cbor-cose/include/: cleverestricky_cbor_cose.h
rust/cbor-cose/src/: bcc.rs  binder_parser.rs  cose.rs  elf_util.rs  hardware_sim.rs  lib.rs
rust/daemon/: Cargo.toml
rust/daemon/src/: injector.rs  main.rs  netlink.rs
rust/interceptor/: Cargo.toml  build.rs
rust/interceptor/src/: binder_hook.rs  certgen.rs  keymint_error.rs  lib.rs  parcel_parser.rs
rust/shared/: Cargo.toml
rust/shared/src/: hardware_sim.rs  lib.rs
service/: build.gradle.kts
(+31 files in other folders)
