[package]
name = "interceptor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
shared = { path = "../shared" }
libc = "0.2"
jni = "0.22"
log = "0.4"
android_logger = "0.15"
cleverestricky-cbor-cose = { path = "../cbor-cose" }
frida-gum = { version = "0.17.2", features = ["event-sink", "invocation-listener", "auto-download"] }
